<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:background="@color/colorPrimary"
        android:elevation="2dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:src="@drawable/back"
            android:padding="16dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <ImageView
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:src="@drawable/logobangjeck"
                android:layout_gravity="center"
                android:padding="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/tiket"
                android:gravity="center"
                android:textColor="@color/colorBackground"
                android:textSize="20dp"
                android:textStyle="bold"/>
        </LinearLayout>

        <ImageView
            android:id="@+id/help"
            android:layout_width="52dp"
            android:layout_height="match_parent"
            android:src="@drawable/help"
            android:padding="16dp"
            android:layout_gravity="end"/>

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="52dp"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/merchant_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/app_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingTop="16dp"/>

        <EditText
            android:id="@+id/merchant_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:background="@drawable/border_bottom"
            android:enabled="false"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:background="@color/colorBackground">

            <ImageView
                android:id="@+id/keranjang"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:paddingStart="8dp"
                android:paddingEnd="8dp"
                android:src="@drawable/trolley"/>

            <TextView
                android:id="@+id/jumlah"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="0"
                android:gravity="center"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/total"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="0"
                android:textSize="20sp"
                android:gravity="center|left"
                android:paddingLeft="16dp"/>

            <Button
                android:id="@+id/lanjut"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:textColor="@color/colorBackground"
                android:text="@string/next"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp" />

        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadpage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorLoadPage"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"/>

    </FrameLayout>
</FrameLayout>